// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configure custom should generate $ignore 1`] = `
[
  "*.less.d.ts",
  ".eslintcache",
  ".eslintrc",
  ".prettierrc",
  "coverage/",
  "foo/bar/",
  "report/",
]
`;

exports[`configure custom should generate $ignore 2`] = `
[
  "*.less.d.ts",
  ".eslintcache",
  ".eslintrc",
  ".prettierrc",
  "coverage/",
  "foo/bar/",
  "report/",
]
`;

exports[`configure default should generate $ignore 1`] = `
[
  "*.less.d.ts",
  ".eslintcache",
  ".eslintrc",
  ".prettierrc",
  "coverage/",
  "dist/",
  "report/",
]
`;

exports[`configure default should generate $ignore 2`] = `
[
  "*.less.d.ts",
  ".eslintcache",
  ".eslintrc",
  ".prettierrc",
  "coverage/",
  "dist/",
  "report/",
]
`;
